# MiniLLM

./: .gitignore  README.md  README_CN.md  README_EN.md  pyproject.toml
configs/: dpo.json  pretrain.json  pretrain_smoke.json  sft.json  sft_lora.json  sft_qlora.json
data_utils/: clean_pretrain.py  convert_ultrafeedback.py  prepare_sft.py
docs/: DPO理论.md  bug_catalog.md  project_summary.md  training_notes.md  架构.md  训练笔记.md  项目总结.md
docs/code_analysis/: 01-transformer.py 模型主干.md  02-rope.py 旋转位置编码.md  03-attention.py GQA注意力.md  04-ffn.py SwiGLU前馈网络.md  05-lora.py LoRA参数高效微调.md  06-sft.py SFT数据协议.md  07-data_loader.py 数据加载与loss.md  08-generate.py 推理链路.md  09-dpo.py DPO偏好对齐.md  10-数据pipeline.md  11-高频手撕.md
eval/: benchmark.py  perplexity.py
inference/: chat.py  export_hf.py
model/: __init__.py  attention.py  block.py  config.py  ffn.py  modeling_llm.py  rope.py
model/reference/: attention.py  block.py  config.py  ffn.py  modeling_llm.py  rope.py
results/: ablation_results.json  ft_vs_lora_ablation.json  lora_rank_ablation.json  perplexity.json
results/compare/: ablation_compare.txt  generation_test.txt  model_comparison.txt  sft_compare.txt  sft_full_compare.txt
scripts/: 1_train_tokenizer.py  2_pretrain.py  3_sft.py  4_qlora.py  5_dpo.py  compare_models.py  kv_cache_benchmark.py  run_ft_vs_lora.py  run_lora_rank_ablation.py  run_pipeline.py  run_qlora_baseline.py  serve_vllm.py  smoke_test.py  smoke_vllm.py  tokenize_to_disk.py
tests/: test_attention.py  test_mmap.py  test_model.py  test_tokenizer.py
tokenizer/: train_tokenizer.py
training/: data_loader.py  dpo.py  lora.py  optimizer.py  pretrain.py  sft.py
